tidied up first section a bit

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <nav>
     <ul>
         <li id = "examplePortfolioLi">
-            <strong>Your name</strong>
+            Your name
         </li>
         <li id = "githubLi">
             <i class="bi bi-github"></i>
@@ -31,14 +31,13 @@
 </nav>
 <main>
     <div id = "introDiv">
-        <h1>Your name</h1>
         <img id = "personImg" src="./assets/kitten pic.jpg" alt="" srcset="">
+        <h1>Your name</h1>
         <h2>Web developer</h2>
-
         <p id = "introP">Lorem ipsum dolor sit amet, nec te vero nemore impedit, sit agam commune et, eu error fierent repudiandae sed.</p>
         <div id = "findOutMoreDiv">        
             <p>Find out more</p>
-            <i class="bi bi-chevron-down"></i>
+            <!-- <i class="bi bi-chevron-down"></i> -->
         </div>
 
 
